fix overflox X on mobile view

--- a/src/components/Hero/HeroAnimation.css
+++ b/src/components/Hero/HeroAnimation.css
@@ -2,10 +2,6 @@
 .hero-main {
   background-image: linear-gradient(
     -225deg,
-    /* #231557 0%,
-    #44107a 29%,
-    #ff1361 67%,
-    #fff800 100% */
     #F5F5DC 0%,
     #78A1BB 29%,
     #565554 67%,
@@ -14,7 +10,7 @@
   /* background-size: auto auto; */
   /* background-clip: border-box; */
   background-size: 200% auto;
-  color: #fff;
+  /* color: #fff; */
   background-clip: text;
   text-fill-color: transparent;
   -webkit-background-clip: text;
