--- a/src/index.css
+++ b/src/index.css
@@ -41,4 +41,5 @@ section {
 } */
 #root {
   width: 100vw;
+  overflow-x: hidden;
 }
